apply plugin: 'com.android.application'
apply plugin: 'kotlin-android'


android {
    namespace 'com.google.ar.core.examples.java.Tree'
    compileSdkVersion 34
    defaultConfig {
        applicationId "com.google.ar.core.examples.java.Tree"

        // AR Optional apps must declare minSdkVersion >= 14.
        // AR Required apps must declare minSdkVersion >= 24.
        minSdkVersion 26
        targetSdkVersion 34
        versionCode 1
        versionName '1.0'
        renderscriptTargetApi 23
        renderscriptSupportModeEnabled true
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    viewBinding {
        enabled = true
    }
    tasks.withType(JavaCompile) {
        options.compilerArgs += [
                "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
                "--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
                "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
        ]
    }

}

dependencies {
    // ARCore (Google Play Services for AR) library.
    implementation 'com.google.ar:core:1.36.0'

    // Obj - a simple Wavefront OBJ file loader
    // https://github.com/javagl/Obj
    implementation 'de.javagl:obj:0.2.1'

    implementation 'androidx.appcompat:appcompat:1.1.0'
    implementation 'com.google.android.material:material:1.2.0'

    implementation 'com.squareup.okhttp3:okhttp:4.4.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
    implementation files('libs\\gson-2.9.1.jar')
    implementation 'net.sourceforge.jexcelapi:jxl:2.6.12'
    // ButterKnife
//    implementation 'com.jakewharton:butterknife:10.1.0'
//    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'

    implementation 'com.jakewharton:butterknife:10.2.3'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'


}
